test/errors/subscript_wrong_type.luv
# RET: 1
# ERR: {self}:6:11:    x = y[7]
# ERR: {ssss}                ^ error: Cannot subscript type i32.
def int main():
    y = 4
    x = y[7]
